// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageActivity render to match the default snapshot when no pipeline 1`] = `
<div
  class="mb-3"
>
  <h3
    class="gl-font-lg"
  >
    Activity
  </h3>
   
  <div
    class="info-well"
  >
    <!---->
     
    <!---->
     
    <div
      class="well-segment d-flex align-items-center"
    >
      <gl-icon-stub
        class="mr-2 d-none d-sm-block"
        name="clock"
        size="16"
      />
       
      <gl-sprintf-stub
        message="Published to the repository at %{timestamp}"
      />
    </div>
  </div>
</div>
`;

exports[`PackageActivity render to match the default snapshot when there is a pipeline 1`] = `
<div
  class="mb-3"
>
  <h3
    class="gl-font-lg"
  >
    Activity
  </h3>
   
  <div
    class="info-well"
  >
    <div
      class="well-segment"
    >
      <div
        class="d-flex align-items-center"
      >
        <gl-icon-stub
          class="d-none d-sm-block"
          name="commit"
          size="16"
        />
         
        <!---->
         
        <gl-link-stub
          href="../../commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        >
          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
        </gl-link-stub>
         
        <clipboard-button-stub
          cssclass="border-0 text-secondary py-0"
          text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
          title="Copy commit SHA"
          tooltipplacement="top"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="well-segment"
    >
      <div
        class="d-flex align-items-center"
      >
        <gl-icon-stub
          class="mr-2 d-none d-sm-block"
          name="pipeline"
          size="16"
        />
         
        <gl-sprintf-stub
          message="Pipeline %{linkStart}%{linkEnd} triggered %{timestamp} by %{author}"
        />
      </div>
    </div>
     
    <div
      class="well-segment d-flex align-items-center"
    >
      <gl-icon-stub
        class="mr-2 d-none d-sm-block"
        name="clock"
        size="16"
      />
       
      <gl-sprintf-stub
        message="Published to the repository at %{timestamp}"
      />
    </div>
  </div>
</div>
`;
